# MVP_Multi-Agent-Financial-Platform_LangchainLanggraph_T9_2025

./: .gitignore  Feature.docx  README.md
CKP_base/docs/: .md  docs1.4_GPT.md  docs1.5_linkDataset.md  docs1.6_LANGFUSE_Langsmith.md
CKP_base/src/agents/: alert_manager.py  data_collector.py  explainer.py  forecaster.py
CKP_base/src/core/: base_agent.py  orchestrator.py
New folder/: .sh  DB.sh
New folder/.kiro/specs/ai-financial-multi-agent-system/: requirements.md  tasks.md
New folder/docs/: docs1.2_Claude_MVP.md  docs1.3_DanhGiaKienTruc.md  docs2.1_DBRunFirst.md  docs2.3_BugReportAndFixes.md  docs2.4_BugReport.md  docs2.6_understand.md  docs2.7_DemoExplanation.md
New folder/src/: README.md  demo.py  requirements.txt
New folder/src/ai_financial/: __init__.py  main.py
New folder/src/ai_financial/agents/: __init__.py
New folder/src/ai_financial/agents/advisory/: ai_cfo_agent.py
New folder/src/ai_financial/core/: database.py  logging.py
New folder/src/ai_financial/mcp/: __init__.py  hub.py  server.py
New folder/src/ai_financial/mcp/tools/: __init__.py  base_tool.py  financial_tools.py
New folder/src/ai_financial/models/: __init__.py  agent.py  enums.py  financial.py  financial_models.py
New folder/src/ai_financial/orchestrator/: context_manager.py  orchestrator.py
New folder/src/ai_financial_multi_agent_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
New folder/src/tests/: __init__.py  test_system_integration.py
config/: agents.yaml
demo/: langfuse_integration_langgraph.py  link.md
deploy/: .env.example  .sh  force_langfuse.py  langgraph.json  requirements_full_20092025.txt
deploy/.kiro/specs/ai-financial-multi-agent-system/: design.md
deploy/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
deploy/docs/: ARCHITECTURE_EVALUATION.md  DOCS_API.md  README_Testing.md  docs2.0_kiro.md  docs2.10_LyThuyetThong_Monitor.md  docs2.10_fixBugOTLP.md  docs2.11_Agent_Deployment_Plan.md  docs2.12_Deployment_Checklist.md  docs2.13_Roadmap_Summary.md  docs2.1_DBRunFirst.md  docs2.2_SECRET_KEY.md  docs2.5_demoAIAgent.md  docs2.6_understand.md  docs2.7_DemoExplanation.md  docs2.8_RealDataGuide.md  docs2.9_understand_Tech_Stack.md  docs3.1_MCP.md  docs3.2_Testing_Guide_CURL.md  docs3.3_Agent_Testing_Guide.md  docs3.4_HowToUseLangFuse.md  docs3.5_Problem_BugAutoLangSmith.md  docs4_Workflow_Agent_IntelligentRouting.md  test_agents.ps1  test_automation.ps1  test_automation.sh
deploy/src/: QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_demo.py
deploy/src/ai_financial/: README.md  cli.py  main.py
deploy/src/ai_financial/agents/: README.md
deploy/src/ai_financial/agents/advisory/: LANGFUSE_VS_LANGSMITH_GUIDE.md  LANGGRAPH_STUDIO_GUIDE.md  README_AI_CFO.md  SWITCH_LANGFUSE_LANGSMITH.md  __init__.py  ai_cfo_agent.py  ai_cfo_workflow_diagram.md  financial_analyst.py  financial_coordinator.py  test_multi_agent.py
deploy/src/ai_financial/agents/monitoring/: __init__.py  alert_agent.py
deploy/src/ai_financial/agents/predictive/: __init__.py  forecasting_agent.py
deploy/src/ai_financial/agents/processing/: __init__.py  data_sync_agent.py  ocr_agent.py  reconciliation_agent.py
deploy/src/ai_financial/agents/reporting/: __init__.py  reporting_agent.py
deploy/src/ai_financial/core/: README.md  __init__.py  base_agent.py  config.py  logging.py
deploy/src/ai_financial/mcp/: __init__.py  server.py
deploy/src/ai_financial/mcp/tools/: base_tool.py
deploy/src/ai_financial/models/: README.md  agent_models.py  financial_models.py  integration.py
deploy/src/ai_financial/orchestrator/: README.md  __init__.py  orchestrator.py  workflow_engine.py
deploy/src/ai_financial_multi_agent_system.egg-info/: PKG-INFO  README.md  SOURCES.txt  requires.txt
deploy/src/tests/: README.md
docs/: docs1.1_.md
mlartifacts/177316696593599529/bae7ca17fcba4491b110e49ba58a33d7/artifacts/: sample_data.csv
mlartifacts/177316696593599529/models/m-d3d44c2c69754d8eadffa870e1c86c40/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlruns/0/: meta.yaml
mlruns/177316696593599529/: meta.yaml
mlruns/177316696593599529/bae7ca17fcba4491b110e49ba58a33d7/: meta.yaml
mlruns/177316696593599529/bae7ca17fcba4491b110e49ba58a33d7/metrics/: accuracy  test_samples
mlruns/177316696593599529/bae7ca17fcba4491b110e49ba58a33d7/outputs/m-d3d44c2c69754d8eadffa870e1c86c40/: meta.yaml
mlruns/177316696593599529/bae7ca17fcba4491b110e49ba58a33d7/tags/: mlflow.runName  mlflow.source.name  test_type
mlruns/177316696593599529/models/m-d3d44c2c69754d8eadffa870e1c86c40/: meta.yaml
src/: requirements.txt
src/agents/: advisor.py  analyzer.py  supervisor.py
src/api/: main.py
src/core/: state.py
(+3 files in other folders)
